fixed the form code

--- a/index.html
+++ b/index.html
@@ -318,9 +318,11 @@
               name="contact"
               method="POST"
               data-netlify="true"
+              netlify-honeypot="bot-field"
               class="contact-form"
               id="contactForm"
             >
+              <input type="hidden" name="form-name" value="contact" />
               <input type="text" name="name" placeholder="Name" required />
               <input type="email" name="email" placeholder="Email" required />
               <textarea
