--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
           <div class="form">
             <form
               name="contact"
+              netlify
               method="POST"
               data-netlify="true"
               netlify-honeypot="bot-field"
