Update Front End Resume

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <div class="download-banner">
           <p>Let's get connected and work together.</p>
           <a
-            href="file/Frontend Developer Resume.docx"
+            href="file/Front End Resume.docx"
             class="download-button"
             id="downloadBtn"
             >Download Resume</a
