--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="nav-links">
           <a href="#home" class="nav-link">Home</a>
           <a href="#about" class="nav-link">About</a>
-          <a href="#skills" class="nav-link">My Skills</a>
+          <a href="#skills" class="nav-link">Skills</a>
           <a href="#projects" class="nav-link">Projects</a>
           <a href="#contact" class="nav-link">Contact</a>
         </div>
