added a linkedin icon and link

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
           <a href="#skills" class="nav-link">Skills</a>
           <a href="#projects" class="nav-link">Projects</a>
           <a href="#contact" class="nav-link">Contact</a>
+          <a
+            href="https://www.linkedin.com/in/janel-monroe-b95936357/"
+            target="_blank"
+          >
+            <i class="fab fa-linkedin"></i
+          ></a>
         </div>
       </nav>
 
